--- a/AdventOfCode.2024/AdventOfCode2024.csproj
+++ b/AdventOfCode.2024/AdventOfCode2024.csproj
@@ -20,6 +20,12 @@
     <None Update="Day_01\Input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day_02\Example.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Day_02\Input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
