--- a/AdventOfCode.2024/AdventOfCode2024.csproj
+++ b/AdventOfCode.2024/AdventOfCode2024.csproj
@@ -35,6 +35,12 @@
     <None Update="Day_03\Input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day_04\Example.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Day_04\Input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
