--- a/AdventOfCode.2024/AdventOfCode2024.csproj
+++ b/AdventOfCode.2024/AdventOfCode2024.csproj
@@ -47,6 +47,12 @@
     <None Update="Day_05\Input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day_06\Example.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Day_06\Input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
